--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@bpmn-io/properties-panel": "^0.20.1",
+    "bpmn-js": "^9.4.1",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0"
